# python-webscraping-basics

./: docker-compose.yml  pyproject.toml
python_webscraping_basics/: api.py  crawler.py
tests/: crawler.py  pdf_class.py  pdf_to_string.py  retrieve_pdf.py
