[tool.poetry]
name = "python-webscraping-basics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pypdf = "^4.2.0"
fastapi = "^0.111.0"
pymongo = "^4.8.0"
json2html = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
